# terraformgen

./: README.md  genbase.config  main.py  pyproject.toml
templates/: data.tf.j2  locals.tf.j2  main.tf.j2  output.tf.j2  providers.tf.j2
